syntax = "proto3";

option go_package = "dfs/";

package dfs;

// ======= SERVICE DEFINITIONS =======
service DistributedFileSystem {
    // Client requests permission to upload a file (gets an available Data Keeper)
    rpc RequestUploadPermission(UploadPermissionRequest) returns (UploadPermissionResponse);
    
    // Client uploads file to the assigned Data Keeper
    rpc UploadFile(UploadFileRequest) returns (UploadFileResponse);
    
    // Data Keeper notifies Master Tracker about a successful upload
    rpc ConfirmUpload(UploadConfirmation) returns (Ack);

    // Master Tracker notifies Client that upload is successfully registered
    rpc NotifyClientUploadCompletion(ClientNotification) returns (Ack);

    // Client requests download info (gets list of Data Keepers storing the file)
    rpc RequestDownloadInfo(DownloadInfoRequest) returns (DownloadInfoResponse);
    
    // Client downloads file from Data Keeper
    rpc DownloadFile(DownloadRequest) returns (DownloadResponse);

    // Data Keeper sends a periodic heartbeat to Master Tracker
    rpc SendHeartbeat(HeartbeatRequest) returns (Ack);

    // Master Tracker notifies Data Keepers to start a replication process
    rpc InitiateReplication(ReplicationRequest) returns (Ack);
}

// ======= MESSAGE DEFINITIONS =======

// Empty message placeholder
message Empty {}

// ======= UPLOAD PROCESS =======
message UploadPermissionRequest {
    string client_id = 1;
}

message UploadPermissionResponse {
    string upload_token = 1;
    MachineInfo assigned_data_keeper = 2;
}

message UploadFileRequest {
    string file_name = 1;
    bytes file_data = 2;
    string upload_token = 3;
    string client_port = 4;
}

message UploadFileResponse {
    string message = 1;
}

message UploadConfirmation {
    string file_name = 1;
    string data_keeper_id = 2;
    string file_path = 3;
    string upload_token = 4;   // Added to track file ownership
    string client_port=5;
}

message ClientNotification {
    string message = 1;
}

// ======= DOWNLOAD PROCESS =======
message DownloadInfoRequest {
    string file_name = 1;
    string client_id = 2; // Added for access control
}

message DownloadInfoResponse {
    repeated MachineInfo available_data_keepers = 1;
    bool access_denied = 2;    // Added for access control
    string message = 3;        // Added for status messages
}

message DownloadRequest {
    string file_name = 1;
}

message DownloadResponse {
    bytes file_data = 1;
}

// ======= REPLICATION & HEARTBEAT =======
message HeartbeatRequest {
    string data_keeper_id = 1;
    repeated string available_ports = 2;
}

message ReplicationRequest {
    string file_name = 1;
    string source_data_keeper = 2;
    string destination_data_keeper = 3;
}

message Ack {
    bool success = 1;
    string message = 2;
}

// ======= SHARED STRUCTURES =======
message MachineInfo {
    string ip = 1;
    string port = 2;
}
